--- a/bibliografia/b.bib
+++ b/bibliografia/b.bib
@@ -4,8 +4,19 @@
   year={2014},
   edition={2},
   address={S\~ao Paulo},
-  publisher={Blucher}
+  publisher={Blucher},
 }
+
+@book{isenmann2012operaccoes,
+  title={Opera{\c{c}}{\~o}es Unit{\'a}rias na Ind{\'u}stria Qu{\'\i}mica},
+  author={Armin Franz Isenmann},
+  address={Tim{\'{o}}teo, MG},
+  publisher={Tradu{\c{c}}{\~a}o complementada. Edi{\c{c}}{\~a}o do autor},
+  edition={2},
+  pages={235},
+  year={2012},
+}
+
 
 @book{Potter15,
   title={{Mecânica dos Fluidos}},
