--- a/capitulos/descricao.tex
+++ b/capitulos/descricao.tex
@@ -5,11 +5,25 @@
 \section{Montagem}
 \label{sec:montagem}
 
-\section{Adaptações Realizadas em Relação ao Projeto Proposto}%
-\label{sec:adaptacoes}
+\begin{itemize}
+\item Realizar quatro furos nas bordas das placas de madeira ($30\times30$ \si{cm}),
+  para que seja possível acoplar os quatro parafusos que irão unir o sistema;
+\item Em uma das placas de madeira realizar um furo central com aproximadamente
+  $1/4$ \si{in}, que servirá como encaixe para a mangueira responsável pelo canal de
+  alimentação do filtro;
+\item As membranas filtrantes serão formadas por latas preenchidas com algodão e
+  vedadas com graxa, para que não ocorra nenhum tipo de vazamento. Um furo
+  central deve ser realizado em cada membrana, para a passagem do fluido;
+\item Uma mangueira irá conectar o protótipo ao recipiente que armazenará o
+  fluido, sendo que no centro deste canal de escoamento deverá ser conectado
+  uma bomba de ar, que terá a função de pressurizar o sistema impedindo que o
+  fluido tenha um escoamento reverso, que não é desejado.
+\end{itemize}
 
-\section{Dificuldades Encontradas}%
-\label{sec:dificuldades}
+Os testes serão realizados fazendo com que o fluido contaminado armazenado em um
+recipiente localizado em um nível acima do filtro tipo prensa (para que seja
+possível o escoamento por gravidade), escoe pelo filtro montado e que o fluido
+obtido deste precesso seja um fluido descontaminado.
 
 %%% Local Variables:
 %%% mode: latex
