--- a/capitulos/introducao.tex
+++ b/capitulos/introducao.tex
@@ -1,10 +1,84 @@
-\chapter{Introdução} \label{intro}
+\chapter{Introdução} \label{sec:intro}
 
-\section{Referencial Teórico}
+\section{Referencial Teórico}\label{sec:refteo}
 
-\section{Aplicabilidade}
+Reaproveitar materiais e fazer de seu novo uso algo útil, não só é tendência,
+como algo necessário, pois com o avanço tecnológico e crescimento populacional,
+a preocupação com es recursos naturais tende a aumentar. Reutilizar recipientes
+metálicos para construir um filtro, além de evitar deposição de materiais no
+meio ambiente, como poluentes, pode ser uma alternativa de baixo custo para
+tratamento de água, antes de despejá-la em efluentes, unindo desenvolvimento de
+tecnologia de baixo custo e funcionalidade com preservação do meio ambiente.
 
-\section{Objetivos}
+Um dos procedimentos mais simples de separação de sólidos e líquidos é a
+filtração, aplicada em muitas etapas de processos da indústria química. Entra no
+filtro a mistura a ser separada e como produtos, saem o filtrado (líquido
+clarificado) e a torta de filtragem (sólido com um pouco de líquido). Ao longo
+do processo, a própria torta se torna o meio filtrante, e como no início ela
+está sendo formada, para que seja efetiva a filtração, os volumes iniciais
+retornam ao filtro. Durante a filtração, características como altura,
+permeabilidade e porosidade da torta, variam, também há variação de pressão ao
+longo do processo, alterando a vazão. As variáveis devem ser controladas para
+cálculo da velocidade da filtração e consequentemente o tempo gasto, sempre
+buscando otimizar o processo \citeayp{isenmann2012operaccoes} .
+
+\subsection{Tipos de filtro}
+
+\label{subsec:tiposdefiltro}
+
+\begin{enumerate}
+
+\item[-] Filtro de pressão
+ 
+  São filtros que funcionam em batelada, ou de forma contínua, operam
+  pressurizados e costumam ter uma ou mais camadas de material granular. São
+  usados geralmente em estações de tratamento de água. O filtro prensa é deste
+  tipo, tem como vantagens a necessidade de uma menor área para sua implantação,
+  São produzidos líquidos límpidos por meio da circulação do filtrado, as tortas
+  resultantes apresentam baixa umidade e pode ser automatizado. Porém, tem as
+  desvantagens de difícil lavagem e manutenção, as placas podem sofrer fissuras
+  e romper-se e a técnica é muito sensível às variações das características dos
+  resíduos.
+
+
+\item[-] Filtro a vácuo
+
+  Os filtros a vácuo podem ser alimentados no fundo ou no topo do equipamento.
+  Caracteriza-se por conduzir tortas secas de pequena espessura, e operar
+  continuamente sob baixa queda de pressão. É utilizado na indústria
+  sucroalcooleira, no modelo contínuo de tambor rotativo a vácuo, por exemplo.
+  Suas tortas apresentam maior quantidade de umidade residual se comparado ao
+  filtro prensa, o meio filtrante requer lavagem constante e consome bastante
+  energia, mas em compensação, a unidade precisa de pequena área de implantação,
+  a torta é facilmente removível, tem fácil controle operacional e manutenção de
+  baixo custo.
+
+
+\end{enumerate}
+
+
+\subsection{Meios filtrantes}
+\label{subsec:meiosfiltrantes}
+
+Para escolher um meio filtrante, precisam ser analisadas anteriormente
+características que serão essenciais na otimização da filtração. É importante
+que ao entrar em contato com a suspensão que será tratada, o meio filtrante não
+sofra fissuras, rompimentos ou ataques químicos. Ter boa e adequada distribuição
+dos poros faz com que o curso da filtração não seja comprometido, seja fácil
+fazer a limpeza e o custo seja baixo.
+
+Após o início da operação, a torta se tornará meio filtrante, por isso para
+obter filtrado límpido, é importante voltar os primeiros volumes ao processo,
+visto que nas primeiras porções de filtrado há traços de particulado.
+
+Alguns meios utilizados que merecem ser citados são algodão, polímeros
+sintéticos, metais, e no caso de filtros granulares, cascalho, areia, antracito
+e carvão ativado.
+
+
+\section{Aplicabilidade}\label{sec:aplicabilidade}
+
+\section{Objetivos}\label{sec:objetivos} 
 
 
 %%% Local Variables:
