--- a/capitulos/introducao.tex
+++ b/capitulos/introducao.tex
@@ -78,7 +78,13 @@ e carvão ativado.
 
 \section{Aplicabilidade}\label{sec:aplicabilidade}
 
-\section{Objetivos}\label{sec:objetivos} 
+Gabi
+
+\section{Objetivo}\label{sec:objetivos} 
+
+O projeto terá como objetivo a montagem de um filtro prensa a partir de
+materiais acessíveis, tal como sua operação na filtração de um fluido contendo
+partículas indesejáveis.
 
 
 %%% Local Variables:
