--- a/capitulos/resultados.tex
+++ b/capitulos/resultados.tex
@@ -1,6 +1,17 @@
-\chapter{Resultados e Discussão}
+\chapter{Resultados Esperados}
 \label{chap:resultados}
 
+Por meio da confecção do filtro prensa espera-se primordialmente que a solução
+com substâncias não requeridas tenha propriedades mais satisfatórias, ou seja,
+que seja mais ``limpa''. Em relação ao equipamento espera-se que à medida que a
+solução passe pelo o filtro, o elemento filtrante (nesse caso o algodão) conterá
+menos solutos/substâncias indesejáveis. Desse modo, o primeiro filtrante conterá
+grande quantidade de substâncias retidas enquanto que o último filtrante conterá
+uma quantidade irrelevante. Além disso, a saída da solução deverá estar
+desobstruída em todo o procedimento, para que a solução esteja de forma mais
+homogênea com as substâncias indesejáveis e que não ocorra o impedimento da
+passagem das mesmas. Ademais, o filtro não poderá modificar a identidade física
+ou química de tais substâncias
 
 %%% Local Variables:
 %%% mode: latex
