--- a/main_archive.tex
+++ b/main_archive.tex
@@ -201,6 +201,8 @@ Hernandez Rodrigues}
 \include{capitulos/introducao}
 \include{capitulos/motivacao}
 \include{capitulos/descricao}
+\include{capitulos/resultados}
+\include{capitulos/cronograma}
 
 %==============================================================================
 
