--- a/bibliografia/b.bib
+++ b/bibliografia/b.bib
@@ -7,6 +7,44 @@
   publisher={Blucher},
 }
 
+@book{Rubim2012,
+  title={Vantagens dos filtros tipo prensa},
+  author={Rubim, C.},
+  year={2012},
+  address={Santo Andr{\'e}, S\~ao Paulo},
+  publisher={Revista TAE},
+  url={http://www.revistatae.com.br/internas.asp?id=4574&link=noticias},
+}
+
+@book{Dias2008,
+  title={A utiliza{\c{c}}\~ao dos filtros na ind\'ustria de metais},
+  author={Dias, T.},
+  year={2008},
+  address={S\~ao Paulo},
+  publisher={Revista Meio Filtrante},
+  url={http://www.meiofiltrante.com.br/edicoes.asp?id=388&link=ultima&fase=C},
+}
+
+@book{Novazzi2008,
+  title={Filtraç{\~a}o {\'e} rica na ind{\'u}stria aliment{\'i}cia e de bebidas},
+  author={Luiz Fernando Novazzi and Luiz Carlos Bertevello and Maristela Marin and Geraldo Fontana},
+  year={2008},
+  address={S\~ao Paulo},
+  publisher={Revista Meio Filtrante},
+  url={http://www.meiofiltrante.com.br/edicoes.asp?id=432&link=ultima&fase=C},
+}
+
+@book{massarani2001fluidodinamica,
+  title={Fluidodin{\^a}mica em sistemas particulados},
+  author={Massarani, Giulio},
+  edition={2},
+  year={2001},
+  address={Rio de Janeiro, RJ},
+  pages={152},
+  publisher={Blucher},
+}
+
+
 @book{isenmann2012operaccoes,
   title={Opera{\c{c}}{\~o}es Unit{\'a}rias na Ind{\'u}stria Qu{\'\i}mica},
   author={Armin Franz Isenmann},
