--- a/capitulos/descricao.tex
+++ b/capitulos/descricao.tex
@@ -2,6 +2,24 @@
 
 \section{Materiais Utilizados}
 
+\begin{table}[H]
+\centering
+\caption{Materiais utilizados no projeto}
+\label{tab:materiais}
+\begin{tabular}{lc}
+\textbf{Materiais}         & \multicolumn{1}{l}{\textbf{Custos}} \\ \toprule
+Algodão                    &                                     \\
+Bomba de ar para bicicleta &                                     \\
+Garrafa PET                & -                                   \\
+Graxa                      &                                     \\
+Latas redondas             & -                                   \\
+Mangueira                  &                                     \\
+Parafuso de rosca sem fim  &                                     \\
+Placas de madeira          & -                                   \\
+  Porcas                   &                                     \\ \bottomrule
+\end{tabular}
+\end{table}
+
 \section{Montagem}
 \label{sec:montagem}
 
