--- a/capitulos/cronograma.tex
+++ b/capitulos/cronograma.tex
@@ -1,6 +1,30 @@
 \chapter{Cronograma}
 \label{chap:cronograma}
 
+\begin{table}[H]
+\label{cronograma}
+\caption{Cronograma planejado}
+\centering
+
+\begin{tabular}{|P{6cm}|c|c|c|c|c|c|}
+    \hline
+    \multirow{2}*{\textbf{Atividades}} & \multicolumn{6}{c|}{\textbf{Semanas}} \\ \cline{2-7}
+    & 1 & 2 & 3 & 4 & 5 & 6 \\
+    \hline
+    Revisão de literatura                & \textbf{X} & \textbf{X} & \textbf{X} &   &   &   \\
+    \hline
+    Preparação e separação dos materiais & \textbf{X} & \textbf{X} &   &   &   &   \\
+    \hline
+    Montagem do experimento              & \textbf{X} & \textbf{X} & \textbf{X} &   &   &   \\
+    \hline
+    Coleta de dados                      &   &   & \textbf{X} & \textbf{X} & \textbf{X} &   \\
+    \hline
+    Apresentação do projeto              &   &   &   &   &   & \textbf{X} \\
+    \hline
+    
+\end{tabular}
+
+\end{table}
 
 %%% Local Variables:
 %%% mode: latex
