--- a/capitulos/motivacao.tex
+++ b/capitulos/motivacao.tex
@@ -1,5 +1,12 @@
 \chapter{Motivação}\label{motivacao}
 
+Buscando aplicar os conhecimentos adquiridos na disciplina Operações Unitárias
+I, será construído um filtro prensa, através da reutilização de materiais,
+geralmente descartados. O projeto também tem motivação sustentável, visto que
+além de reutilizar material e evitar seu descarte no meio ambiente, o filtrado
+sairá mais limpo, para que ao ser descartado, não seja tão agressivo ao meio
+ambiente.
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../main_archive"
