--- a/capitulos/cronograma.tex
+++ b/capitulos/cronograma.tex
@@ -1,29 +1,24 @@
 \chapter{Cronograma}
 \label{chap:cronograma}
 
+% Please add the following required packages to your document preamble:
+% \usepackage{multirow}
 \begin{table}[H]
-\label{cronograma}
-\caption{Cronograma planejado}
 \centering
-
-\begin{tabular}{|P{6cm}|c|c|c|c|c|c|}
-    \hline
-    \multirow{2}*{\textbf{Atividades}} & \multicolumn{6}{c|}{\textbf{Semanas}} \\ \cline{2-7}
-    & 1 & 2 & 3 & 4 & 5 & 6 \\
-    \hline
-    Revisão de literatura                & \textbf{X} & \textbf{X} & \textbf{X} &   &   &   \\
-    \hline
-    Preparação e separação dos materiais & \textbf{X} & \textbf{X} &   &   &   &   \\
-    \hline
-    Montagem do experimento              & \textbf{X} & \textbf{X} & \textbf{X} &   &   &   \\
-    \hline
-    Coleta de dados                      &   &   & \textbf{X} & \textbf{X} & \textbf{X} &   \\
-    \hline
-    Apresentação do projeto              &   &   &   &   &   & \textbf{X} \\
-    \hline
-    
+\caption{Cronograma planejado}
+\label{cronograma}
+\resizebox{\textwidth}{!}{
+\begin{tabular}{|l|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\hline
+\multicolumn{1}{|c|}{\multirow{2}{*}{\textbf{Atividades}}} & \multicolumn{13}{c|}{\textbf{Semanas}}                                                                                                                                 \\ \cline{2-14} 
+\multicolumn{1}{|c|}{}                                     & 1          & 2          & 3          & 4          & 5          & 6          & 7          & 8          & 9          & 10         & 11         & 12         & 13         \\ \hline
+Revisão de literatura                                      & \textbf{X} & \textbf{X} & \textbf{X} & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  \\ \hline
+Preparação e separação dos materiais                       & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{X} & \textbf{X} & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  \\ \hline
+Montagem experimental                                      & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{X} & \textbf{X} & \textbf{X} & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  \\ \hline
+Coleta de dados                                            & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{X} & \textbf{X} & \textbf{X} & \textbf{X} & \textbf{}  \\ \hline
+Apresentação do projeto                                    & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{}  & \textbf{X} \\ \hline
 \end{tabular}
-
+}
 \end{table}
 
 %%% Local Variables:
