--- a/capitulos/descricao.tex
+++ b/capitulos/descricao.tex
@@ -7,16 +7,16 @@
 \caption{Materiais utilizados no projeto}
 \label{tab:materiais}
 \begin{tabular}{lc}
-\textbf{Materiais}         & \multicolumn{1}{l}{\textbf{Custos}} \\ \toprule
-Algodão                    &                                     \\
-Bomba de ar para bicicleta &                                     \\
+\textbf{Materiais}         & \multicolumn{1}{l}{\textbf{Custos (R\$)}} \\ \toprule
+Algodão                    &      14,00 pacote                   \\
+Bomba de ar para bicicleta &      19,00 cada                     \\
 Garrafa PET                & -                                   \\
-Graxa                      &                                     \\
+Graxa                      &       7,00 cada                     \\
 Latas redondas             & -                                   \\
-Mangueira                  &                                     \\
-Parafuso de rosca sem fim  &                                     \\
+Mangueira                  &       4,00 cada                     \\
+Parafuso de rosca sem fim  &       2,00 metro                    \\
 Placas de madeira          & -                                   \\
-  Porcas                   &                                     \\ \bottomrule
+  Porcas                   &       8,00 pacote                   \\ \bottomrule
 \end{tabular}
 \end{table}
 
