--- a/main_archive.tex
+++ b/main_archive.tex
@@ -98,9 +98,9 @@ Hernandez Rodrigues}
 \date{2017}
 \newcommand{\orient}{Professora Iara Hernandez Rodriguez}
 \newcommand{\disciplina}{GNE340}
-\tipo{Projeto entregue e apresentado à \orient{} como requisito da disciplina \disciplina{}.}
+\tipo{Pré--projeto entregue e apresentado à \orient{} como requisito da disciplina \disciplina{}.}
 \orientador{\orient}
-\newcommand{\otipo}{Projeto entregue e apresentado à \orient{} como requisito da disciplina \disciplina{}.}
+\newcommand{\otipo}{Pré--projeto entregue e apresentado à \orient{} como requisito da disciplina \disciplina{}.}
 \newcommand{\olocal}{Lavras -- MG}
 \local{Lavras -- MG}
 
