--- a/capitulos/descricao.tex
+++ b/capitulos/descricao.tex
@@ -41,7 +41,7 @@ Placas de madeira          & -                                   \\
 Os testes serão realizados fazendo com que o fluido contaminado armazenado em um
 recipiente localizado em um nível acima do filtro tipo prensa (para que seja
 possível o escoamento por gravidade), escoe pelo filtro montado e que o fluido
-obtido deste precesso seja um fluido descontaminado.
+obtido deste processo seja um fluido descontaminado.
 
 %%% Local Variables:
 %%% mode: latex
