--- a/capitulos/introducao.tex
+++ b/capitulos/introducao.tex
@@ -107,7 +107,7 @@ Equação do movimento da fase particulada    & $ \pderr{\rho_p\varepsilon_p\tbu
 
 Na Tabela \ref{table:fluidodinamicafiltracao} o termo de campo \textbf{b} será
 definido a medida que se adotar qual filtro será utilizado na operação:
-gravitaiconal ou rotativo, por exemplo. Já a grandeza $\phi$ refere-se ao fluxo
+gravitacional ou rotativo, por exemplo. Já a grandeza $\phi$ refere-se ao fluxo
 de captura, por meio do material, nas partículas presentes na suspensão a ser
 filtrada. Deve-se considerar essa grandeza quando há filtração lenta em filtro
 granular, na filtração granular rápida e filtração com ou sem formação de torta
