--- a/capitulos/motivacao.tex
+++ b/capitulos/motivacao.tex
@@ -4,7 +4,7 @@ Buscando aplicar os conhecimentos adquiridos na disciplina Operações Unitária
 I, será construído um filtro prensa, através da reutilização de materiais,
 geralmente descartados. O projeto também tem motivação sustentável, visto que
 além de reutilizar material e evitar seu descarte no meio ambiente, o filtrado
-sairá menos contaminado, para que ao ser descartado, não seja tão agressivo ao meio
+sairá mais limpo, para que ao ser descartado, não seja tão agressivo ao meio
 ambiente.
 
 %%% Local Variables:
