--- a/capitulos/conclusao.tex
+++ b/capitulos/conclusao.tex
@@ -1,6 +1,20 @@
 \chapter{Conclusão}
 \label{chap:conclusao}
 
+Com esse projeto foi possível alcançar o objetivo proposto, que foi a confecção
+de um protótipo de filtro prensa eficiente e que fizesse o reuso de materiais
+para evitar o seu descarte ao meio ambiente. Por meio desse protótipo pode-se
+concluir que há uma eficácia superior quando faz uso de uma solução com
+partículas indesejáveis de maior granulometria, uma vez que elas se tornam um
+meio filtrante. Além disso, teve-se dificuldade em manter a solução homogênea e
+com vazão constante, o que não foi possível de se obter com mérito nesse
+projeto. Ademais, esse protótipo é versátil, podendo regular a membrana
+filtrante, inserindo ou retirando latas preenchidas com algodão à medida do
+quanto se deseja obter a qualidade do filtrado. A solução por sua vez não pode
+conter partículas contaminantes, porque não há um processo que faça a
+purificação das mesmas.
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../main_archive"
