--- a/capitulos/descricao.tex
+++ b/capitulos/descricao.tex
@@ -23,25 +23,23 @@ Placas de madeira          & -                                   \\
 \section{Montagem}
 \label{sec:montagem}
 
-\begin{itemize}
-\item Realizar quatro furos nas bordas das placas de madeira ($30\times30$ \si{cm}),
-  para que seja possível acoplar os quatro parafusos que irão unir o sistema;
-\item Em uma das placas de madeira realizar um furo central com aproximadamente
-  $1/4$ \si{in}, que servirá como encaixe para a mangueira responsável pelo canal de
-  alimentação do filtro;
-\item As membranas filtrantes serão formadas por latas preenchidas com algodão e
-  vedadas com graxa, para que não ocorra nenhum tipo de vazamento. Um furo
-  central deve ser realizado em cada membrana, para a passagem do fluido;
-\item Uma mangueira irá conectar o protótipo ao recipiente que armazenará o
-  fluido, sendo que no centro deste canal de escoamento deverá ser conectado
-  uma bomba de ar, que terá a função de pressurizar o sistema impedindo que o
-  fluido tenha um escoamento reverso, que não é desejado.
-\end{itemize}
+Primeiramente, foram realizados quatro furos nos cantos das placas de madeira,
+que é onde os parafusos seriam acoplados para unir o sistema. Em uma das placas
+de madeira, foi feito um furo central de \nicefrac{1}{4} \si{in}, para encaixe
+da mangueira de alimentação do filtro. Na montagem da membrana filtrante (latas
+preenchidas com algodão), foram feitos furos de \nicefrac{1}{4} \si{in} no
+centro de cada lata, por onde a solução a ser filtrada entraria no meio
+filtrante (algodão).
 
-Os testes serão realizados fazendo com que o fluido contaminado armazenado em um
-recipiente localizado em um nível acima do filtro tipo prensa (para que seja
-possível o escoamento por gravidade), escoe pelo filtro montado e que o fluido
-obtido deste processo seja um fluido descontaminado.
+Foram conectadas as duas placas por meio dos parafusos de rosca sem fim, de modo
+a deixar um espaço para colocar as membranas filtrantes. As latas foram
+preenchidas com algodão e tampadas, empilhando e encaixando-as entre as duas
+placas de madeira, de modo que as membranas filtrantes ficaram prensadas entre
+as placas de madeira. Uma mangueira foi conectada ao furo central da placa de
+madeira, por onde seria feita a alimentação. Foi utilizada uma garrafa PET para
+colocar a solução a ser filtrada.
+
+
 
 %%% Local Variables:
 %%% mode: latex
