--- a/capitulos/resultados.tex
+++ b/capitulos/resultados.tex
@@ -1,17 +1,24 @@
-\chapter{Resultados Esperados}
+\chapter{Resultados e Discussões}
 \label{chap:resultados}
 
-Por meio da confecção do filtro prensa espera-se primordialmente que a solução
-com substâncias não requeridas tenha propriedades mais satisfatórias, ou seja,
-que seja mais ``limpa''. Em relação ao equipamento espera-se que à medida que a
-solução passe pelo o filtro, o elemento filtrante (nesse caso o algodão) conterá
-menos solutos/substâncias indesejáveis. Desse modo, o primeiro filtrante conterá
-grande quantidade de substâncias retidas enquanto que o último filtrante conterá
-uma quantidade irrelevante. Além disso, a saída da solução deverá estar
-desobstruída em todo o procedimento, para que a solução esteja de forma mais
-homogênea com as substâncias indesejáveis e que não ocorra o impedimento da
-passagem das mesmas. Ademais, o filtro não poderá modificar a identidade física
-ou química de tais substâncias
+Após a construção do filtro tipo prensa, foram realizados inúmeros
+procedimentos, a partir de diferentes soluções com partículas indesejadas a fim
+de verificar a funcionalidade do filtro.
+
+Os resultados obtidos foram satisfatórios, pois em todos os procedimentos
+realizados foi possível a obtenção de uma solução com menor teor de partículas
+aparentemente.
+
+Os procedimentos realizados seguem descritos abaixo.
+
+De forma simplista foram realizados três testes preliminares com solução de água
+e partículas sem granulometria conhecida para verificar a funcionalidade e
+vedação do sistema construído.
+
+\section{Procedimento 1}
+\label{sec:proc1}
+
+
 
 %%% Local Variables:
 %%% mode: latex
