--- a/main_archive.tex
+++ b/main_archive.tex
@@ -68,6 +68,7 @@
 \usepackage{titling}
 \usepackage[version=4]{mhchem}
 \usepackage{array}
+\usepackage{units}
 \usepackage{siunitx}
 \usepackage{enumitem}
 \usepackage{booktabs}
@@ -202,8 +203,9 @@ Hernandez Rodrigues}
 \include{capitulos/introducao}
 \include{capitulos/motivacao}
 \include{capitulos/descricao}
+\include{capitulos/procedimento}
 \include{capitulos/resultados}
-\include{capitulos/cronograma}
+\include{capitulos/conclusao}
 
 %==============================================================================
 
